# ICL_AI_Course

./: .gitignore  Lecture4.ipynb  Lecture5.ipynb  Lecture7.ipynb  Lecture8.ipynb  README.md  _toc.yml  pyproject.toml
Exercises/: Lecture1.ipynb  Lecture2.ipynb  Lecture5.ipynb  Lecture6.ipynb  Lecture7.ipynb  Lecture8.ipynb  Lecture9.ipynb
